WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182798
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLPlugInImageElement::didAddUserAgentShadowRoot + 618
https://bugs.webkit.org/show_bug.cgi?id=182798
Summary
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLP...
Dean Jackson
Reported
2018-02-14 11:03:27 PST
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::HTMLPlugInImageElement::didAddUserAgentShadowRoot + 618
Attachments
Patch
(2.02 KB, patch)
2018-02-14 11:10 PST
,
Dean Jackson
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-02-14 11:05:09 PST
<
rdar://problem/23337253
>
Dean Jackson
Comment 2
2018-02-14 11:10:52 PST
Created
attachment 333819
[details]
Patch
Dean Jackson
Comment 3
2018-02-14 11:34:56 PST
Committed
r228476
: <
https://trac.webkit.org/changeset/228476
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug